force-app/main/default/objects/Epic__c/Epic__c.object-meta.xml
<CustomObject>
    <description>An epic is a collection of user stories, usually grouped by primary goal of a project increment.</description>
    <label>Epic</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Epic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>