force-app/main/default/objects/Epic__c/fields/LOEAccepted__c.field-meta.xml
<CustomField>
    <fullName>LOEAccepted__c</fullName>
    <description>LOE of User Stories that have been accepted under this epic.</description>
    <inlineHelpText>LOE of User Stories that have been accepted under this epic.</inlineHelpText>
    <label>LOE Accepted</label>
    <summarizedField>UserStory__c.LOENumber__c</summarizedField>
    <summaryFilterItems>
        <field>UserStory__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>UserStory__c.Epic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>