force-app/main/default/objects/Epic__c/fields/LOETotal__c.field-meta.xml
<CustomField>
    <fullName>LOETotal__c</fullName>
    <description>Total LOE of User Stories under this Epic.</description>
    <inlineHelpText>Total LOE of User Stories under this Epic.</inlineHelpText>
    <label>LOE Total</label>
    <summarizedField>UserStory__c.LOENumber__c</summarizedField>
    <summaryForeignKey>UserStory__c.Epic__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>