force-app/main/default/objects/Epic__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Epic</relationshipLabel>
    <relationshipName>Epic</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>