force-app/main/default/objects/Epic__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(UserStoriesTotal__c = UserStoriesAccepted__c, &quot;Accepted&quot;, 
 IF(UserStoriesAccepted__c &gt; 0 &amp;&amp; UserStoriesAccepted__c &lt; UserStoriesTotal__c, &quot;In Progress&quot;, 
  IF(UserStoriesInProgress__c &gt; 0, &quot;In Progress&quot;, &quot;Not Started&quot;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>