force-app/main/default/objects/Epic__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the Epic</description>
    <label>Title</label>
    <length>140</length>
    <required>true</required>
    <type>Text</type>
</CustomField>