force-app/main/default/objects/Epic__c/fields/UserStoriesAccepted__c.field-meta.xml
<CustomField>
    <fullName>UserStoriesAccepted__c</fullName>
    <description>The count of Accepted User Stories under this Epic.</description>
    <inlineHelpText>The count of Accepted User Stories under this Epic.</inlineHelpText>
    <label>User Stories Accepted</label>
    <summaryFilterItems>
        <field>UserStory__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>UserStory__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>