force-app/main/default/objects/Epic__c/fields/UserStoriesInProgress__c.field-meta.xml
<CustomField>
    <fullName>UserStoriesInProgress__c</fullName>
    <description>User Stories that are are least &quot;In Progress&quot; but not &quot;Accepted&quot;.</description>
    <inlineHelpText>User Stories that are are least &quot;In Progress&quot; but not &quot;Accepted&quot;.</inlineHelpText>
    <label>User Stories In Progress</label>
    <summaryFilterItems>
        <field>UserStory__c.Status__c</field>
        <operation>equals</operation>
        <value>In Progress, Dev Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>UserStory__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>