force-app/main/default/objects/Epic__c/fields/UserStoriesTotal__c.field-meta.xml
<CustomField>
    <fullName>UserStoriesTotal__c</fullName>
    <description>Count of User Stories under this Epic.</description>
    <inlineHelpText>Total LOE of User Stories under this Epic.</inlineHelpText>
    <label>User Stories Total</label>
    <summaryForeignKey>UserStory__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>